--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["es2020"],
+    "outDir": "./dist",
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
